--- a/public/locales/en/menu.json
+++ b/public/locales/en/menu.json
@@ -22,6 +22,6 @@
   },
   "perms": "Authorizations",
   "users": "Users",
-  "owners": "Sellers",
+  "businesses": "Businesses",
   "upload": "Upload"
 }
