--- a/public/locales/tr/menu.json
+++ b/public/locales/tr/menu.json
@@ -22,6 +22,6 @@
   },
   "perms": "Yetkilendirmeler",
   "users": "Kullanıcılar",
-  "owners": "Satıcılar",
+  "businesses": "İşletmeler",
   "upload": "Yükle"
 }
