feature/support-base: add the skeleton

--- a/public/locales/en/menu.json
+++ b/public/locales/en/menu.json
@@ -21,8 +21,14 @@
     "list": "List Categories",
     "create": "Create Category"
   },
+  "support": {
+    "title": "Customer Support",
+    "feedbacks": "Feedbacks",
+    "contacts": "Contacts",
+    "tickets": "Tickets"
+  },
   "perms": "Authorizations",
   "users": "Users",
   "businesses": "Businesses",
-  "upload": "Upload"
+  "upload": "Upload to CDN"
 }
