feature/support-base: add contact list view

--- a/public/locales/en/table.json
+++ b/public/locales/en/table.json
@@ -2,5 +2,7 @@
   "empty": "No Record Found",
   "length": "Showing {{filteredTotal}} out of total {{total}} data",
   "prev": "Previous",
-  "next": "Next"
+  "next": "Next",
+  "search": "Search",
+  "search_placeholder": "Search..."
 }
