--- a/public/locales/tr/support.json
+++ b/public/locales/tr/support.json
@@ -20,7 +20,7 @@
     "feedback": {
         "list": {
             "title": "Geri Bildirim Listesi",
-            "subtitle": "Bu tabloda sitemizden bize ulaşan kişilerin listesi yer almaktadır."
+            "subtitle": "Bu tabloda sitemizden bize geri bildirimde bulunan kişilerin listesi yer almaktadır."
         },
         "table": {
             "os": "İşletim Sistemi",
@@ -36,5 +36,25 @@
             "markRead": "Okundu olarak işaretle",
             "filter": "E-posta, Kullanıcı Adı, İşletim Sistemi veya Mesaj'a göre ara"
         }
+    },
+    "list": {
+        "title": "Talep Listesi",
+        "subtitle": "Bu tabloda sitemizden bize destek talebinde bulunan kişilerin listesi yer almaktadır."
+    },
+    "table": {
+        "filter": {
+            "query": "Kullanıcı adı, konu veya herhangi mesaj içeriğinde arama yapın.",
+            "state": "Duruma göre arama yapın"
+        },
+        "state": "Durum",
+        "open": "Açık",
+        "all": "Tümü",
+        "closed": "Kapalı",
+        "answered": "Cevaplandı",
+        "deleted": "Silindi",
+        "user": "Kullanıcı",
+        "subject": "Konu",
+        "date": "Tarih",
+        "actions": "İşlemler"
     }
 }
