feature/listing-module: add the skeleton

--- a/public/locales/en/menu.json
+++ b/public/locales/en/menu.json
@@ -29,6 +29,7 @@
   },
   "perms": "Authorizations",
   "users": "Users",
+  "listings": "Listings",
   "businesses": "Businesses",
   "upload": "Upload to CDN"
 }
