--- a/public/locales/tr/menu.json
+++ b/public/locales/tr/menu.json
@@ -29,6 +29,7 @@
   },
   "perms": "Yetkilendirmeler",
   "users": "Kullanıcılar",
+  "listings": "İlanlar",
   "businesses": "İşletmeler",
   "upload": "CDN'e Yükle"
 }
