feature/listing-module: complete the base section

--- a/public/locales/en/listing.json
+++ b/public/locales/en/listing.json
@@ -12,6 +12,8 @@
     },
     "details": {
         "title": "Listing Details",
+        "images": "Images",
+         "openWithSite": "Open on listing site",
         "state": {
             "isActive": "Is it active?",
             "isDeleted": "Deleted?",
