feature/help: add article craete view

--- a/public/locales/tr/help.json
+++ b/public/locales/tr/help.json
@@ -98,7 +98,45 @@
             "date": "Tarih",
             "actions": "İşlemler",
             "view": "Görüntüle"
+        },
+        "form": {
+            "meta": {
+                "section": {
+                    "title": "Meta Bilgileri",
+                    "subtitle": "Bu bilgiler sitede görünür ve arama motorları tarafından taranır."
+                },
+                "title": {
+                    "label": "Başlık",
+                    "placeholder": "Başlık giriniz..."
+                },
+                "keywords": {
+                    "label": "Anahtar Kelimeler",
+                    "placeholder": "Anahtar kelimeler giriniz..."
+                }
+            },
+            "category": {
+                "title": "Kategori Seçimi",
+                "subtitle": "Makale hangi kategoriye ait olacak?",
+                "label": "Kategori",
+                "placeholder": "Kategori seçiniz..."
+            },
+            "detail": {
+                "title": "Makale İçeriği",
+                "subtitle": "Makale içeriğini buradan düzenleyebilirsiniz."
+            },
+            "submit": "Kaydet"
+        },
+        "create": {
+            "title": "Yeni Makale Ekle",
+            "check": "Yeni Makale eklenecek, devam etmek istiyor musunuz?"
+        },
+        "edit": {
+            "title": "Makale Düzenle",
+            "check": "Makale düzenlenecek, devam etmek istiyor musunuz?"
         }
+    },
+    "upload": {
+        "failed": "Yükleme başarısız oldu."
     },
     "translate": {
         "en": "English",
