feature/account: add the skeleton of all

--- a/public/locales/en/menu.json
+++ b/public/locales/en/menu.json
@@ -33,6 +33,7 @@
     "contacts": "Contacts",
     "tickets": "Tickets"
   },
+  "account": "User Profiles",
   "perms": "Authorizations",
   "users": "Users",
   "listings": "Listings",
