--- a/public/locales/tr/menu.json
+++ b/public/locales/tr/menu.json
@@ -33,6 +33,7 @@
     "contacts": "İletişimler",
     "tickets": "Destek Talepleri"
   },
+  "account": "Kullanıcı Profilleri",
   "perms": "Yetkilendirmeler",
   "users": "Kullanıcılar",
   "listings": "İlanlar",
