--- a/public/locales/tr/account.json
+++ b/public/locales/tr/account.json
@@ -15,5 +15,36 @@
         "filter": {
             "query": "İsim, kullanıcı adı veya id ile ara..."
         }
+    },
+    "details": {
+        "title": "Profil Detayları",
+        "fullName": "İsim",
+        "completedRate": "Tamamlama Oranı",
+        "birthDate": "Doğum Tarihi",
+        "notSet": "Belirtilmemiş",
+        "isActive": "Aktif mi?",
+        "active": "Aktif",
+        "inactive": "Pasif",
+        "isDeleted": "Silindi mi?",
+        "deleted": "Silindi",
+        "notDeleted": "Silinmedi",
+        "isVerified": "Doğrulandı mı?",
+        "verified": "Doğrulandı",
+        "notVerified": "Doğrulanmadı",
+        "createdAt": "Oluşturulma Tarihi",
+        "updatedAt": "Güncellenme Tarihi",
+        "description": "Açıklama",
+        "restore": {
+            "title": "Profili Geri Yükle",
+            "subtitle": "Bu profilin silinmesini geri alabilirsiniz.",
+            "button": "Geri Yükle",
+            "success": "Profil başarıyla geri yüklendi."
+        },
+        "delete": {
+            "title": "Profili Sil",
+            "subtitle": "Yandaki butona tıklayarak bu profilin silinmesini sağlayabilirsiniz.",
+            "button": "Sil",
+            "success": "Profil başarıyla silindi."
+        }
     }
 }
